vanlife-backend/kubernetes/vanlife-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanlife-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vanlife-backend
  template:
    metadata:
      labels:
        app: vanlife-backend
    spec:
      containers:
        - name: vanlife-backend
          image: ghcr.io/tbeerbower/vanlife-backend:latest
          ports:
            - containerPort: 9000
