vanlife-backend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanlife-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vanlife-backend
  template:
    metadata:
      labels:
        app: vanlife-backend
    spec:
      containers:
        - name: vanlife-backend
          image: ghcr.io/tbeerbower/vanlife-backend:latest
          ports:
            - containerPort: 9000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vanlife-backend-service
spec:
  selector:
    app: vanlife-backend
  type: LoadBalancer  # Changed from NodePort
  ports:
    - protocol: TCP
      port: 9000      # Service port inside Kubernetes
      targetPort: 9000 # Matches container port
      # nodePort: 30009  # Optional - LoadBalancer will automatically assign one
