vanlife-backend/kubernetes/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080       # Changed from 80
      protocol: TCP
      targetPort: 80   # NGINX still listens on 80 internally
    - name: https
      port: 8443       # Changed from 443 if you want
      protocol: TCP
      targetPort: 443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
