vanlife-backend/kubernetes/vanlife-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanlife-service
spec:
  type: LoadBalancer
  selector:
    app: vanlife-backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
